--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>Maven-test</groupId>
     <artifactId>Maven-test</artifactId>
-    <version>1.1.3-SNAPSHOT</version>
+    <version>1.1.3</version>
 
     <dependencies>
         <dependency>
@@ -142,6 +142,6 @@
         <connection>scm:git:git@github.com:Sionin/Maven-test.git</connection>
         <url>scm:git:git@github.com:Sionin/Maven-test.git</url>
         <developerConnection>scm:git:git@github.com:Sionin/Maven-test.git</developerConnection>
-        <tag>1.1.0</tag>
+        <tag>Maven-test-1.1.3</tag>
     </scm>
 </project>
