--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,6 @@
         <connection>scm:git:git@github.com:Sionin/Maven-test.git</connection>
         <url>scm:git:git@github.com:Sionin/Maven-test.git</url>
         <developerConnection>scm:git:git@github.com:Sionin/Maven-test.git</developerConnection>
-        <tag>1.1.0</tag>
+        <tag>hotfix</tag>
     </scm>
 </project>
