--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>Maven-test</groupId>
     <artifactId>Maven-test</artifactId>
-    <version>1.1.4-SNAPSHOT</version>
+    <version>1.1.4</version>
+
+    <!--<repositories>-->
+    <!--<repository>-->
+    <!--<id>maven2-repository.dev.java.net</id>-->
+    <!--<name>Java.net Repository for Maven</name>-->
+    <!--<url>http://download.java.net/maven/2/</url>-->
+    <!--</repository>-->
+    <!--</repositories>-->
 
     <dependencies>
         <dependency>
@@ -16,52 +23,43 @@
         </dependency>
     </dependencies>
 
-    <!--<reporting>-->
-    <!--<plugins>-->
-    <!--<plugin>-->
-    <!--<groupId>org.codehaus.mojo</groupId>-->
-    <!--<artifactId>scmchangelog-maven-plugin</artifactId>-->
-    <!--<version>1.3</version>-->
-    <!--<configuration>-->
-    <!--<trackerUrlPattern>#</trackerUrlPattern>-->
-    <!--</configuration>-->
-    <!--</plugin>-->
-    <!--</plugins>-->
-    <!--</reporting>-->
-
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-changelog-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <type>date</type>
-                    <dates>
-                        <date implementation="java.lang.String">2010-10-19</date>
-                        <date implementation="java.lang.String">2012-12-19</date>
-                    </dates>
-                    <dateFormat>yyyy-MM-dd</dateFormat>
-                </configuration>
-            </plugin>
-        </plugins>
-    </reporting>
-
     <build>
         <plugins>
 
-            <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-changelog-plugin</artifactId>-->
-                <!--<version>2.2</version>-->
-            <!--</plugin>-->
-
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-scm-plugin</artifactId>
-                <version>1.8.1</version>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>maven-mail-plugin</artifactId>
+                <version>1.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>mail</goal>
+                        </goals>
+                        <phase>test</phase>
+                    </execution>
+                </executions>
                 <configuration>
-                    <goals>package</goals>
+                    <smtphost>localhost</smtphost>
+                    <smtpport>25</smtpport>
+                    <smtpuser />
+                    <smtppassword />
+                    <from>maven@localhost</from>
+                    <recipients>
+                        <recipient>Sergei.Ionin@zed.com</recipient>
+                    </recipients>
+                    <!--<ccRecipients>-->
+                    <!--<ccRecipient>c@localhost</ccRecipient>-->
+                    <!--<ccRecipient>d@localhost</ccRecipient>-->
+                    <!--</ccRecipients>-->
+                    <!--<bccRecipients>-->
+                    <!--<bccRecipient>e@localhost</bccRecipient>-->
+                    <!--<bccRecipient>f@localhost</bccRecipient>-->
+                    <!--</bccRecipients>-->
+                    <subject>${project.version}</subject>
+                    <body>test</body>
+                    <attachments>
+                        <attachment>${basedir}/README.md</attachment>
+                    </attachments>
                 </configuration>
             </plugin>
 
@@ -170,6 +168,9 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
+                    <completionGoals>mail:mail</completionGoals>
+                <arguments />
+                <tagNameFormat>@{project.artifactId}-@{project.version}</tagNameFormat>
                 </configuration>
             </plugin>
 
@@ -191,6 +192,6 @@
         <connection>scm:git:git@github.com:Sionin/Maven-test.git</connection>
         <url>scm:git:git@github.com:Sionin/Maven-test.git</url>
         <developerConnection>scm:git:git@github.com:Sionin/Maven-test.git</developerConnection>
-        <tag>1.1.0</tag>
+        <tag>Maven-test-1.1.4</tag>
     </scm>
 </project>
