--- a/pom.xml
+++ b/pom.xml
@@ -30,14 +30,14 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>maven-mail-plugin</artifactId>
                 <version>1.0</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>mail</goal>
-                        </goals>
-                        <phase>test</phase>
-                    </execution>
-                </executions>
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<goals>-->
+                            <!--<goal>mail</goal>-->
+                        <!--</goals>-->
+                        <!--<phase>test</phase>-->
+                    <!--</execution>-->
+                <!--</executions>-->
                 <configuration>
                     <smtphost>localhost</smtphost>
                     <smtpport>25</smtpport>
@@ -55,7 +55,7 @@
                     <!--<bccRecipient>e@localhost</bccRecipient>-->
                     <!--<bccRecipient>f@localhost</bccRecipient>-->
                     <!--</bccRecipients>-->
-                    <subject>${project.version}</subject>
+                    <subject>My title</subject>
                     <body>test</body>
                     <attachments>
                         <attachment>${basedir}/README.md</attachment>
