--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,6 @@
     <artifactId>Maven-test</artifactId>
     <version>1.1.6-SNAPSHOT</version>
 
-    <!--<repositories>-->
-    <!--<repository>-->
-    <!--<id>maven2-repository.dev.java.net</id>-->
-    <!--<name>Java.net Repository for Maven</name>-->
-    <!--<url>http://download.java.net/maven/2/</url>-->
-    <!--</repository>-->
-    <!--</repositories>-->
-
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -29,7 +21,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>maven-mail-plugin</artifactId>
-                <version>1.0</version>
+                <version>1.0.1</version>
                 <!--<executions>-->
                     <!--<execution>-->
                         <!--<goals>-->
@@ -41,7 +33,7 @@
                 <configuration>
                     <smtphost>localhost</smtphost>
                     <smtpport>25</smtpport>
-                    <smtpuser />
+                    <smtpuser/>
                     <smtppassword />
                     <from>maven@localhost</from>
                     <recipients>
@@ -56,9 +48,11 @@
                     <!--<bccRecipient>f@localhost</bccRecipient>-->
                     <!--</bccRecipients>-->
                     <subject>My title</subject>
-                    <body>test</body>
+                    <editCommand>notepad</editCommand>
+                    <textFile>${basedir}/test.txt</textFile>
+                    <body>${project.artifactId}-${project.version}</body>
                     <attachments>
-                        <attachment>${basedir}/README.md</attachment>
+                        <attachment>${basedir}/test.txt</attachment>
                     </attachments>
                 </configuration>
             </plugin>
@@ -168,7 +162,7 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <completionGoals>mail:mail</completionGoals>
+                    <completionGoals>mail:changes</completionGoals>
                 <arguments />
                 <tagNameFormat>@{project.artifactId}-@{project.version}</tagNameFormat>
                 </configuration>
