--- a/pom.xml
+++ b/pom.xml
@@ -162,7 +162,8 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <completionGoals>mail:changes</completionGoals>
+                    <preparationGoals>mail:changes</preparationGoals>
+                    <completionGoals>mail:mail</completionGoals>
                 <arguments />
                 <tagNameFormat>@{project.artifactId}-@{project.version}</tagNameFormat>
                 </configuration>
