--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>Maven-test</groupId>
     <artifactId>Maven-test</artifactId>
-    <version>1.1.9</version>
+    <version>1.1.10-SNAPSHOT</version>
 
     <properties>
         <changes.file>${basedir}/test.txt</changes.file>
