--- a/pom.xml
+++ b/pom.xml
@@ -146,10 +146,10 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <preparationGoals>mail:changes scm:checkin -Dmessage="Commit changes.txt for new version " -Dinclude=${changes.file}</preparationGoals>
-                    <completionGoals>mail:mail</completionGoals>
+                    <preparationGoals>mail:changes scm:checkin -Dmessage="Commit changes.txt for new version " -Dinclude=${changes.file} mail:mail</preparationGoals>
+                    <completionGoals></completionGoals>
                 <arguments />
-                <tagNameFormat>@{project.artifactId}-@{project.version}</tagNameFormat>
+                <!--<tagNameFormat>@{project.artifactId}-@{project.version}</tagNameFormat>-->
                 </configuration>
             </plugin>
 
