--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>Maven-test</groupId>
     <artifactId>Maven-test</artifactId>
-    <version>1.1.13-SNAPSHOT</version>
+    <version>1.1.13</version>
 
     <properties>
         <changes.file>${basedir}/test.txt</changes.file>
@@ -147,7 +147,7 @@
                 <version>2.3.2</version>
                 <configuration>
                     <preparationGoals>mail:changes scm:checkin -Dmessage="Commit changes.txt for new version " -Dinclude=${changes.file} mail:mail</preparationGoals>
-                    <completionGoals></completionGoals>
+                    <completionGoals />
                 <arguments />
                 <!--<tagNameFormat>@{project.artifactId}-@{project.version}</tagNameFormat>-->
                 </configuration>
@@ -171,6 +171,6 @@
         <connection>scm:git:git@github.com:Sionin/Maven-test.git</connection>
         <url>scm:git:git@github.com:Sionin/Maven-test.git</url>
         <developerConnection>scm:git:git@github.com:Sionin/Maven-test.git</developerConnection>
-        <tag>Maven-test-1.1.9</tag>
+        <tag>Maven-test-1.1.13</tag>
     </scm>
 </project>
