--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>Maven-test</groupId>
     <artifactId>Maven-test</artifactId>
-    <version>1.1.14-SNAPSHOT</version>
+    <version>1.1.14</version>
 
     <properties>
         <changes.file>${basedir}/test.txt</changes.file>
@@ -171,6 +171,6 @@
         <connection>scm:git:git@github.com:Sionin/Maven-test.git</connection>
         <url>scm:git:git@github.com:Sionin/Maven-test.git</url>
         <developerConnection>scm:git:git@github.com:Sionin/Maven-test.git</developerConnection>
-        <tag>Maven-test-1.1.9</tag>
+        <tag>Maven-test-1.1.14</tag>
     </scm>
 </project>
