--- a/pom.xml
+++ b/pom.xml
@@ -1,171 +1,179 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>Maven-test</groupId>
     <artifactId>Maven-test</artifactId>
     <version>1.1.15-SNAPSHOT</version>
+    <parent>
+        <groupId>ru.infon</groupId>
+        <artifactId>infon-parent</artifactId>
+        <version>1.0</version>
+    </parent>
 
     <properties>
         <changes.file>${basedir}/test.txt</changes.file>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.10</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+    <!--<dependencies>-->
+        <!--<dependency>-->
+            <!--<groupId>junit</groupId>-->
+            <!--<artifactId>junit</artifactId>-->
+            <!--<version>4.10</version>-->
+            <!--<scope>test</scope>-->
+        <!--</dependency>-->
+    <!--</dependencies>-->
 
-    <build>
-        <plugins>
+    <!--<build>-->
+        <!--<plugins>-->
 
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>maven-mail-plugin</artifactId>
-                <version>1.0.1</version>
-                <configuration>
-                    <smtphost>localhost</smtphost>
-                    <smtpport>25</smtpport>
-                    <smtpuser />
-                    <smtppassword />
-                    <from>maven@localhost</from>
-                    <recipients>
-                        <recipient>Sergei.Ionin@zed.com</recipient>
-                    </recipients>
-                    <title>${project.artifactId}-${project.version}</title>
-                    <editCommand>notepad</editCommand>
-                    <changesFile>${changes.file}</changesFile>
-                </configuration>
-            </plugin>
-
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.4</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12</version>
-                <configuration>
-                    <systemPropertyVariables>
-                        <storage>classpath</storage>
-                    </systemPropertyVariables>
-                    <classesDirectory>${project.build.directory}/generated-classes/emma/classes</classesDirectory>
-                    <useSystemClassLoader>false</useSystemClassLoader>
-                </configuration>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.codehaus.mojo</groupId>-->
+                <!--<artifactId>maven-mail-plugin</artifactId>-->
+                <!--<version>1.0.1</version>-->
+                <!--<configuration>-->
+                    <!--<smtphost>localhost</smtphost>-->
+                    <!--<smtpport>25</smtpport>-->
+                    <!--<smtpuser/>-->
+                    <!--<smtppassword/>-->
+                    <!--<from>maven@localhost</from>-->
+                    <!--<recipients>-->
+                        <!--<recipient>Sergei.Ionin@zed.com</recipient>-->
+                    <!--</recipients>-->
+                    <!--<title>${project.artifactId}-${project.version}</title>-->
+                    <!--<editCommand>notepad</editCommand>-->
+                    <!--<changesFile>${changes.file}</changesFile>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
 
 
-            <plugin>
-                <groupId>org.sonatype.maven.plugin</groupId>
-                <artifactId>emma-maven-plugin</artifactId>
-                <version>1.2</version>
-                <executions>
-                    <execution>
-                        <phase>process-classes</phase>
-                        <goals>
-                            <goal>instrument</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-compiler-plugin</artifactId>-->
+                <!--<version>2.4</version>-->
+                <!--<configuration>-->
+                    <!--<source>1.6</source>-->
+                    <!--<target>1.6</target>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12</version>
-                <configuration>
-                    <useSystemClassLoader>false</useSystemClassLoader>
-                </configuration>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-surefire-plugin</artifactId>-->
+                <!--<version>2.12</version>-->
+                <!--<configuration>-->
+                    <!--<systemPropertyVariables>-->
+                        <!--<storage>classpath</storage>-->
+                    <!--</systemPropertyVariables>-->
+                    <!--<classesDirectory>${project.build.directory}/generated-classes/emma/classes</classesDirectory>-->
+                    <!--<useSystemClassLoader>false</useSystemClassLoader>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
 
-            <plugin>
-                <groupId>org.sonatype.maven.plugin</groupId>
-                <artifactId>emma4it-maven-plugin</artifactId>
-                <version>1.3</version>
-                <executions>
-                    <execution>
-                        <id>report</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                        <configuration>
-                            <sourceSets>
-                                <sourceSet>
-                                    <directory>${project.build.sourceDirectory}</directory>
-                                </sourceSet>
-                            </sourceSets>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
 
-            <plugin>
-                <inherited>true</inherited>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
+            <!--<plugin>-->
+                <!--<groupId>org.sonatype.maven.plugin</groupId>-->
+                <!--<artifactId>emma-maven-plugin</artifactId>-->
+                <!--<version>1.2</version>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<phase>process-classes</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>instrument</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
 
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-surefire-plugin</artifactId>-->
+                <!--<version>2.12</version>-->
+                <!--<configuration>-->
+                    <!--<useSystemClassLoader>false</useSystemClassLoader>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                        </manifest>
-                        <manifestEntries>
-                            <Version>${project.version}</Version>
-                        </manifestEntries>
-                    </archive>
-                </configuration>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.sonatype.maven.plugin</groupId>-->
+                <!--<artifactId>emma4it-maven-plugin</artifactId>-->
+                <!--<version>1.3</version>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<id>report</id>-->
+                        <!--<phase>test</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>report</goal>-->
+                        <!--</goals>-->
+                        <!--<configuration>-->
+                            <!--<sourceSets>-->
+                                <!--<sourceSet>-->
+                                    <!--<directory>${project.build.sourceDirectory}</directory>-->
+                                <!--</sourceSet>-->
+                            <!--</sourceSets>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <preparationGoals>mail:changes scm:checkin -Dmessage="Commit changes.txt for new version " -Dinclude=${changes.file} mail:mail</preparationGoals>
-                    <completionGoals />
-                <arguments />
-                <!--<tagNameFormat>@{project.artifactId}-@{project.version}</tagNameFormat>-->
-                </configuration>
-            </plugin>
+            <!--<plugin>-->
+                <!--<inherited>true</inherited>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-javadoc-plugin</artifactId>-->
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12</version>
-                <configuration>
-                    <useSystemClassLoader>false</useSystemClassLoader>
-                </configuration>
-            </plugin>
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<id>attach-javadocs</id>-->
+                        <!--<goals>-->
+                            <!--<goal>jar</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
 
-        </plugins>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-jar-plugin</artifactId>-->
+                <!--<configuration>-->
+                    <!--<archive>-->
+                        <!--<manifest>-->
+                            <!--<addClasspath>true</addClasspath>-->
+                        <!--</manifest>-->
+                        <!--<manifestEntries>-->
+                            <!--<Version>${project.version}</Version>-->
+                        <!--</manifestEntries>-->
+                    <!--</archive>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
 
-        <testSourceDirectory>src/main/test</testSourceDirectory>
-    </build>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-release-plugin</artifactId>-->
+                <!--<version>2.3.2</version>-->
+                <!--<configuration>-->
+                    <!--<preparationGoals>mail:changes scm:checkin -Dmessage="Commit changes.txt for new version "-->
+                        <!---Dinclude=${changes.file} mail:mail-->
+                    <!--</preparationGoals>-->
+                    <!--<completionGoals/>-->
+                    <!--<arguments/>-->
+                    <!--&lt;!&ndash;<tagNameFormat>@{project.artifactId}-@{project.version}</tagNameFormat>&ndash;&gt;-->
+                <!--</configuration>-->
+            <!--</plugin>-->
+
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-surefire-plugin</artifactId>-->
+                <!--<version>2.12</version>-->
+                <!--<configuration>-->
+                    <!--<useSystemClassLoader>false</useSystemClassLoader>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
+
+        <!--</plugins>-->
+
+        <!--<testSourceDirectory>src/main/test</testSourceDirectory>-->
+    <!--</build>-->
 
     <scm>
         <connection>scm:git:git@github.com:Sionin/Maven-test.git</connection>
