--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
         <version>1.0</version>
     </parent>
 
-    <properties>
-        <changes.file>${basedir}/test.txt</changes.file>
-    </properties>
+    <!--<properties>-->
+        <!--<changes.file>${basedir}/test.txt</changes.file>-->
+    <!--</properties>-->
 
     <!--<dependencies>-->
         <!--<dependency>-->
