--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>Maven-test</groupId>
     <artifactId>Maven-test</artifactId>
-    <version>1.1.17</version>
+    <version>1.1.18-SNAPSHOT</version>
     <parent>
         <groupId>ru.infon</groupId>
         <artifactId>infon-plugin-service</artifactId>
@@ -15,6 +15,6 @@
         <connection>scm:git:git@github.com:Sionin/Maven-test.git</connection>
         <url>scm:git:git@github.com:Sionin/Maven-test.git</url>
         <developerConnection>scm:git:git@github.com:Sionin/Maven-test.git</developerConnection>
-        <tag>Maven-test-1.1.17</tag>
+        <tag>Maven-test-1.1.16</tag>
     </scm>
 </project>
