--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>1.1.18-SNAPSHOT</version>
 
     <parent>
-        <groupId>ru.infon</groupId>
+        <groupId>ru.infon.maven</groupId>
         <artifactId>infon-plugin-service</artifactId>
         <version>1.0</version>
     </parent>
