--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,13 @@
     <artifactId>Maven-test</artifactId>
     <version>1.1.19-SNAPSHOT</version>
 
+    <properties>
+        <projectKey>QA</projectKey>
+    </properties>
+
     <parent>
         <groupId>ru.infon.maven</groupId>
-        <artifactId>infon-plugin-service</artifactId>
+        <artifactId>infon-plugin</artifactId>
         <version>1.0</version>
     </parent>
 
